welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:13: error: ';' expected but 'else' found.
		} else if ("B") {
                  ^BDRBuggle:27: error: Unmatched closing brace '}' ignored here
	}
        ^